#3887 closed bug (fixed)
BMenuItem is missing the ability to draw the modifier indicator for B_OPTION_KEY
Reported by: | anevilyak | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
BMenuItem contains glyph definitions and such for B_CONTROL_KEY, B_COMMAND_KEY and B_SHIFT_KEY, but not B_OPTION_KEY. As a consequence, any menu item using the key in its modifiers has its shortcut misrepresented, most notably tracker add-ons, as those use opt+cmd+letter.
Change History (4)
comment:1 by , 16 years ago
Owner: | changed from | to
---|
comment:2 by , 16 years ago
Status: | new → assigned |
---|
follow-up: 4 comment:3 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev30661. The look of the labels could be improved, though. Even better would be to draw them using drawing commands instead of bitmaps, so they would scale with the font size.
comment:4 by , 16 years ago
Replying to jackburton:
Fixed in hrev30661. The look of the labels could be improved, though. Even better would be to draw them using drawing commands instead of bitmaps, so they would scale with the font size.
Thanks! And yeah, I was thinking that too, but my skills with drawing code that actually looks eye pleasing leave some to be desired. That probably also be desirable for the internationalization GSoC project, since that'd allow us to draw localized names for the different keys.
I'm on it